fix photo on mobile and create photo component

--- a/src/component/home.css
+++ b/src/component/home.css
@@ -4,64 +4,6 @@
   position: relative;
 }
 
-.opaque::before {
-  content: '';
-  background: #2A1B37;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 1;
-  z-index: 3;
-}
-
-#photo {
-  position: absolute;
-  top: 5vh;
-  left: 5vw;
-  object-fit: contain;
-  width: 90vw;
-  height: 90vh;
-  z-index: 4;
-}
-
-#photo-close {
-  cursor: pointer;
-  height: 32px;
-  width: 32px;
-  position: fixed;
-  top: 32px;
-  right: 32px;
-  display: block;
-  float: right;
-  background-color: transparent;
-  border: none;
-  z-index: 3;
-}
-
-#photo-close .cross {
-  position: absolute;
-  top: 0;
-  left: 13px;
-  height: 30px;
-  width: 1px;
-  background-color: white;
-  transform: rotate(45deg);
-}
-
-#photo-close .cross::before {
-  content: '';
-  height: 30px;
-  width: 1px;
-  position: absolute;
-  top: 0;
-  right: 0;
-  background-color: white;
-  display: block;
-  transform: rotate(90deg);
-}
-
 #home-left {
   display: flex;
   flex-direction: column;
