--- a/src/component/preview.css
+++ b/src/component/preview.css
@@ -10,11 +10,14 @@
   height: 100vh;
   width: 60vw;
   display: block;
-  z-index: -1;
 }
 
 .show {
-  z-index: 1!important;
+  z-index: 1;
+}
+
+.hide {
+  z-index: -1;
 }
 
 #book-top {
@@ -87,6 +90,17 @@
   overflow: auto;
 }
 
+.opaque::after {
+  content: '';
+  display: block;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  background-color: #2A1B37;
+}
+
 #book-container h1 {
   margin: 2rem 0;
   font-weight: 100;
@@ -153,7 +167,6 @@
   display: block;
   transform: rotate(90deg);
 }
-
 
 @media (max-width: 1000px) {
   #preview {
